--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "face-api.js": "^0.22.2",
+    "rc-progress": "^3.4.1",
     "react": "^18.2.0",
+    "react-cam": "^1.1.11",
+    "react-camera-pro": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-expand-animated": "^1.0.2",
     "react-router-dom": "^6.9.0",
